20211015소스보기수정
수정했다...

--- a/refer-effect/assets/css/style.css
+++ b/refer-effect/assets/css/style.css
@@ -405,6 +405,20 @@ nav li a:hover {
           animation: unfoldOut 1s ease forwards;
 }
 
+#example.show .example-bg .example-cont {
+  -webkit-transform: scaley(0);
+          transform: scaley(0);
+  -webkit-animation: zoomIn 0.5s 0.8s ease forwards;
+          animation: zoomIn 0.5s 0.8s ease forwards;
+}
+
+#example.hide .example-bg .example-cont {
+  -webkit-transform: scaley(0);
+          transform: scaley(0);
+  -webkit-animation: zoomOut 0.5s ease forwards;
+          animation: zoomOut 0.5s ease forwards;
+}
+
 @-webkit-keyframes unfoldIn {
   0% {
     -webkit-transform: scaley(0.005) scalex(0);
@@ -465,39 +479,25 @@ nav li a:hover {
   }
 }
 
-#example.show .example-bg .example-cont {
-  -webkit-transform: scaley(0);
-          transform: scaley(0);
-  -webkit-animation: zoomIn 0.5s 0.8s ease forwards;
-          animation: zoomIn 0.5s 0.8s ease forwards;
-}
-
-#example.hide .example-bg .example-cont {
-  -webkit-transform: scaley(0);
-          transform: scaley(0);
-  -webkit-animation: zoomOut 0.5s ease forwards;
-          animation: zoomOut 0.5s ease forwards;
-}
-
 @-webkit-keyframes zoomIn {
   0% {
-    -webkit-transform: scaley(0);
-            transform: scaley(0);
+    -webkit-transform: scaley(0) scalex(0);
+            transform: scaley(0) scalex(0);
   }
   100% {
-    -webkit-transform: scaley(1);
-            transform: scaley(1);
+    -webkit-transform: scaley(1) scalex(1);
+            transform: scaley(1) scalex(1);
   }
 }
 
 @keyframes zoomIn {
   0% {
-    -webkit-transform: scaley(0);
-            transform: scaley(0);
+    -webkit-transform: scaley(0) scalex(0);
+            transform: scaley(0) scalex(0);
   }
   100% {
-    -webkit-transform: scaley(1);
-            transform: scaley(1);
+    -webkit-transform: scaley(1) scalex(1);
+            transform: scaley(1) scalex(1);
   }
 }
 
