--- a/refer-effect/assets/scss/style.scss
+++ b/refer-effect/assets/scss/style.scss
@@ -383,12 +383,12 @@ nav {
 }
 
 @keyframes zoomIn {
-	0%   {transform: scaley(0)}
-	100% {transform: scaley(1)}
+	0%   {transform: scaley(0) scalex(0);}
+	100% {transform: scaley(1) scalex(1);}
 }
 @keyframes zoomOut {
-	0%   {transform: scaley(1)}
-	100% {transform: scaley(0)}
+	0%   {transform: scaley(1) scalex(1);}
+	100% {transform: scaley(0) scalex(0);}
 }
 
 #example.show .example-bg .example-cont {
