--- a/site-react/assets/css/style.css
+++ b/site-react/assets/css/style.css
@@ -477,6 +477,13 @@
   font-display: swap;
 }
 
+@font-face {
+  font-family: 'HeirofLightBold';
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-07@1.0/HeirofLightBold.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
 *,
 *:before,
 *:after {
@@ -866,7 +873,7 @@ table {
 }
 
 #header .header__menu ul {
-  margin-left: 10px;
+  margin-right: 10px;
 }
 
 #header .header__menu ul li {
@@ -926,6 +933,18 @@ table {
   }
   #header .header__ham {
     display: block;
+  }
+}
+
+@media (max-width: 800px) {
+  #header .header__logo a {
+    font-size: 22px;
+  }
+  #header .header__ham {
+    top: 14px;
+    left: 10px;
+    -webkit-transform: scale(0.8);
+            transform: scale(0.8);
   }
 }
 
@@ -1006,6 +1025,12 @@ table {
   }
 }
 
+@media (max-width: 800px) {
+  #footer div {
+    padding: 14px;
+  }
+}
+
 #mainCont {
   background-color: #000;
   height: 100vh;
@@ -1023,4 +1048,79 @@ table {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+#mainCont br {
+  display: none;
+}
+
+#mainCont2 {
+  background-color: #000;
+  height: 100vh;
+  font-size: 9vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-family: "HeirofLightBold";
+  color: #FFBA54;
+}
+
+#mainCont2 .main__cont h2 {
+  font-size: 8vw;
+  line-height: 26vw;
+  height: 26vw;
+  background: url(../img/react_img.png) no-repeat;
+  background-size: 40%;
+  background-position: center;
+}
+
+#mainCont2 p {
+  font-size: 2vw;
+  text-align: center;
+  line-height: 2.5vw;
+}
+
+@media (max-width: 800px) {
+  #mainCont {
+    font-size: 15vw;
+  }
+  #mainCont br {
+    display: block;
+  }
+  #mainCont2 {
+    background-color: #000;
+    height: 100vh;
+    font-size: 9vw;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    font-family: "HeirofLightBold";
+    color: #FFBA54;
+  }
+  #mainCont2 .main__cont h2 {
+    font-size: 12vw;
+    line-height: 110vw;
+    height: 50vw;
+    background: url(../img/react_img.png) no-repeat;
+    background-size: 55%;
+    background-position: center;
+  }
+  #mainCont2 p {
+    padding-top: 18vw;
+    font-size: 4vw;
+    text-align: center;
+    line-height: 6vw;
+  }
 }
