--- a/site-react/assets/scss/_vars.scss
+++ b/site-react/assets/scss/_vars.scss
@@ -10,3 +10,4 @@
     $font-sub: 'Rajdhani';
     $font-kor1: 'Chosunilbo_myungjo';
     $font-kor2: 'SCoreDream';
+    $font-main2: 'HeirofLightBold';
