--- a/site-react/assets/css/style.css
+++ b/site-react/assets/css/style.css
@@ -1271,6 +1271,7 @@ table {
     margin-bottom: 5vw;
   }
   #aboutCont .about_bottom h1 {
+    padding: 0 5vw;
     font-size: 15vw;
     font-family: "HeirofLightBold";
     line-height: 16vw;
