--- a/site-react/assets/scss/_pages.scss
+++ b/site-react/assets/scss/_pages.scss
@@ -233,6 +233,7 @@
                 margin-bottom: 5vw;
             }
             h1 {
+                padding: 0 5vw;
                 font-size: 15vw;
                 font-family: $font-main2;
                 line-height: 16vw;
