--- a/site-react/assets/scss/_pages.scss
+++ b/site-react/assets/scss/_pages.scss
@@ -61,9 +61,9 @@
         width: 1200px;
         margin: 0 auto;
         h2 {
-            padding: 15vw 0;
-            line-height: 8vw;
-            font-size: 8vw;
+            padding: 200px 0;
+            line-height: 150px;
+            font-size: 150px;
             font-family: $font-main2;
         }
     }
@@ -77,12 +77,14 @@
             }
             .sub_img02 {
                 width: 50vw;
+                max-width: 800px;
                 margin-right: 2vw;
                 float: left;
             }
 
             .sub_img03 {
                 width: 50vw;
+                max-width: 800px;
                 padding-left: 2vw;
                 float: right;
             }
@@ -97,35 +99,32 @@
             }
         }
     }
-    .about_sub:last-child {
-        padding-bottom: 10vw;
-    }
 
     .about_bottom {
         width: 100%;
-        padding: 10vw 0;
         background: #000;
         text-align: center;
         color: #fff;
+        padding-bottom: 150px;
         
         span {
             font-size: 2vw;
             font-family: $font-kor1;
         }
         h1 {
-            font-size: 9vw;
+            padding: 0 10vw;
+            font-size: 150px;
             font-family: $font-main2;
-            line-height: 9vw;
+            line-height: 150px;
         }
         button {
             font-family: $font-sub;
-            font-size: 2vw;
-            padding: 2vw 5vw;
+            font-size: 50px;
+            padding: 20px 50px;
             border: 1px solid #fff;
-            border-radius: 5vw;
+            border-radius: 100px;
             background: #000;
             color: #fff;
-            margin-bottom: 10vw;
         }
     }
 }
@@ -178,7 +177,7 @@
 
         .about__cont {
             width: 100%;
-            padding: 5vw;
+            padding: 3vw;
             margin: 0 auto;
             h2 {
                 margin-top: 10vw;
