--- a/refer-effect/assets/scss/style.scss
+++ b/refer-effect/assets/scss/style.scss
@@ -77,9 +77,9 @@ $font-NEXIN1: 'NEXONLv1';
 $font-NEXIN2: 'NEXONLv2';
 
 $gradient1: linear-gradient(to bottom, #11e8bb 0%, #8200c9 100%);
-$gradient2: linear-gradient(180deg, #2af598 0%, #009efd 100%);
+$gradient2: linear-gradient(to top, #30cfd0 0%, #330867 100%);
 $gradient3: linear-gradient(-20deg, #d558c8 0%, #24d292 100%);
-$gradient4: linear-gradient(-225deg, #A8BFFF 0%, #884D80 100%);
+$gradient4: linear-gradient(-225deg, #EACCF8 0%, #6654F1 100%);
 $gradient5: linear-gradient(-225deg, #231557 0%, #44107A 29%, #FF1361 100%);
 $gradient6: linear-gradient(-225deg, #3D4E81 0%, #5753C9 48%, #6E7FF3 100%);
 
