--- a/portfolio/assets/css/font.css
+++ b/portfolio/assets/css/font.css
@@ -23,8 +23,22 @@
 /* DMSans */
 @font-face {
     font-family: 'DM Sans';
-    font-style: none;
-    font-weight: 400;
+    font-style: normal;
+    font-weight: 700;
     font-display: swap;
-    src: url(https://fonts.gstatic.com/s/dmsans/v6/rP2Fp2ywxg089UriCZa4ET-DNl0.woff2) format('woff2');
+    src: url(https://fonts.gstatic.com/s/dmsans/v6/rP2Cp2ywxg089UriASitCBamC2QX.woff2) format('woff2');
   }
+  /* latin */
+  @font-face {
+    font-family: 'DM Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/dmsans/v6/rP2Cp2ywxg089UriASitCBimCw.woff2) format('woff2');
+  }
+
+  /* 나눔 고딕 */
+  @import url(//fonts.googleapis.com/earlyaccess/nanumgothic.css);
+    .nanumgothic * {
+    font-family: 'Nanum Gothic', sans-serif;
+    }
