--- a/portfolio/assets/css/style.css
+++ b/portfolio/assets/css/style.css
@@ -4,7 +4,7 @@
     padding: 0;
 }
 
-body { font-family: 'GmarketSansBold'; background-image: url(../img/topbg.jpg); background-repeat: no-repeat; background-size: 100%; }
+body { font-family: 'GmarketSansBold'; background-image: url(../img/topbg.jpg); background-repeat: no-repeat; background-size: 100%; overflow-x:hidden; }
 
 /* 레이아웃 */
 
@@ -23,8 +23,6 @@ body { font-family: 'GmarketSansBold'; background-image: url(../img/topbg.jpg); 
     border-radius: 50%;
     z-index: 10000;
 }
-
-
 
 
 /* 헤더 */
@@ -57,18 +55,18 @@ header .hem_menu {
     cursor: pointer;
 }
 .hem_menu .hem::after {
+    content: '';
     transition: .5s;
     position: absolute;
-    content: '';
     width: 20px; height: 3px;
     left: 10px; top: 15px;
     background: #0D626B;
 }
 .hem_menu .hem::before {
+    content: '';
     transition: .5s;
     position: absolute;
-    content: '';
-    width: 20px; height: 3px;
+    width: 20px; height: 2.8px;
     left: 10px; top: 22px;
     background: #0D626B;
 }
@@ -210,6 +208,47 @@ header .hem_menu {
     color: #0396A6;
 }
 
+/* 피그마 슬라이드 */
+.about .swiper-slide {
+    margin-bottom: 1000px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.about .swiper-slide .study {
+    position: absolute;
+    left: 75%; top: 35%;
+    transform: translate(-50%, -35%);
+    width: 2000px;
+    overflow: hidden;
+}
+
+.about .swiper-slide .study img {
+    width: 500px;
+    margin: 10px;
+    float: left;
+    border: 1px solid #C9C9C9;
+    border-radius: 3px;
+    box-shadow: 10px 5px 5px #146d9d11;
+}
+.slider-inner {
+    position: relative;
+    width: 4000px;
+    overflow: hidden;
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    gap: 5px;
+    pointer-events: none;
+}
+
+.slider {
+    float: left;
+    width: 550px;
+    height: 480px;
+    position: relative;
+}
+
+
 /* 안경 애니메이션 */
 .about .glasses_bg {
     width: 450px; height: 450px;
@@ -241,4 +280,88 @@ header .hem_menu {
 @keyframes backrecoil {
     0% {background-position: -450px 0;}
     100% {background-position: -450px -3150px;}
+}
+
+/* 마이커리어 */
+.my_career {}
+.my_career h3 {
+    font-size: 18px;
+    color: #0396A6;
+}
+.my_career .career p {
+    text-transform: uppercase;
+    font-family: 'DM Sans';
+    font-weight: 700;
+    font-size: 20px;
+}
+.my_career .career_img {
+    margin-top: 50px;
+    padding: 200px;
+    position: relative;
+}
+.my_career .career_img img {
+    position: absolute;
+    left: 50%; top: 50%;
+    transform: translate(-50%,-50%);
+    width: 250px;
+}
+.my_career .work {
+    width: 650px;
+    margin: 0 auto;
+    position: relative;
+    padding: 30px 0;
+}
+.my_career .work ul {
+    width: 800px;
+    position: absolute;
+    left: -75px;
+    margin: -35px auto;
+    overflow: hidden;
+}
+.my_career .work ul li:first-child {
+    float: left;
+}
+.my_career .work ul li:last-child {
+    float: right;
+}
+.my_career .work::after {
+    content: '';
+    position: absolute;
+    left: 50%; top: 0;
+    transform: translateX(-50%);
+    width: 700px;
+    height: 3px;
+    background: #0396A6;
+    z-index: -1;
+}
+.my_career .work .work_drag {
+    position: absolute;
+    color: #fff;
+    font-family: 'GmarketSansMedium';
+    line-height: 42px;
+    left: 0; top: -20px;
+    width: 40px; height: 40px;
+    box-shadow: 0 0 0 2px #0396A6;
+    background: #0396A6;
+    border: 3px solid #fff;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.my_career .career {
+    overflow: hidden;
+}
+.my_career .career ul {
+    display: inline-block;
+}
+.my_career .career ul li {
+    font-family: 'DM Sans';
+    font-size: 18px;
+    float: left;
+    text-align: left;
+    padding: 40px;
+}
+.my_career .career ul li span {
+    font-family: 'Nanum Gothic', sans-serif;
+    font-size: 14px;
 }
